[gd_scene load_steps=8 format=2]

[ext_resource path="res://tanks/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://MachineGun.gd" type="Script" id=2]
[ext_resource path="res://bullets/Enemy1Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/onlyObjects_retina_rotated.png" type="Texture" id=4]
[ext_resource path="res://UI/UnitDisplay.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 26.5

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 247.535

[node name="MachineGun" instance=ExtResource( 1 )]

collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
_sections_unfolded = [ "Collision" ]
Bullet = ExtResource( 3 )
max_speed = 1
rotation_speed = 1.0
gun_cooldown = 1.0
max_health = 20
turret_speed = 20.0
detect_radius = 800

[node name="Body" parent="." index="0"]

texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 172.141, 89.2405, 49.141, 48 )
_sections_unfolded = [ "Region" ]

[node name="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Turret" parent="." index="2"]

texture = ExtResource( 4 )
offset = Vector2( 20, 0 )
region_enabled = true
region_rect = Rect2( 71.8205, 94.3702, 52.75, 34.75 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Muzzle" parent="Turret" index="0"]

position = Vector2( 45, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Flash" parent="Turret" index="1"]

position = Vector2( 55, 0 )
texture = ExtResource( 4 )
offset = Vector2( 20, 0 )
region_rect = Rect2( 534.641, 18.2405, 52.5, 16 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility" ]

[node name="DetectRadius" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

shape = SubResource( 2 )

[node name="UnitDisplay" parent="." index="7" instance=ExtResource( 5 )]

[connection signal="health_changed" from="." to="UnitDisplay" method="update_healthbar"]

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]

[connection signal="body_shape_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_shape_exited"]


